# 25L-zum

./: README.md  justfile  pyproject.toml
data/raw/errors/: easy_ham_errors.csv  spam_2_errors.csv  spam_errors.csv
notebooks/: 01-spam-dataset.ipynb
