[project]
name = "ml-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]

[tool.ruff]
exclude = ["__pycache__", ".ipynb_checkpoints", ".venv", ".pytest_cache", ".vscode", "data", ".idea", "logs", "runs"]
lint.ignore = ["E722"] # bare except - https://docs.astral.sh/ruff/rules/bare-except/
